--- a/myhockeyapp/views/player_stats.pug
+++ b/myhockeyapp/views/player_stats.pug
@@ -27,7 +27,7 @@ block links
             
 block content
     div.row
-        div.col-lg-12
+        div.col-md-12
             h1.page-header #{title}
             ol.breadcrumb
                 li
@@ -43,7 +43,7 @@ block content
                         | 
                         | Player ##{player_id}                      
     div.row
-        div.col-lg-12
+        div.col-md-12
             div.panel.panel-primary
                 div.panel-heading
                     h3.panel-title 
@@ -52,7 +52,7 @@ block content
                 div.panel-body            
                     div(id='chart00' class='c3chart') 
     div.row
-        div.col-lg-12
+        div.col-md-12
             div.panel.panel-primary
                 div.panel-heading
                     h3.panel-title 
@@ -61,7 +61,7 @@ block content
                 div.panel-body                
                     div(id='chart10' class='c3chart')              
     div.row
-        div.col-lg-12
+        div.col-md-12
             div.panel.panel-primary
                 div.panel-heading
                     h3.panel-title 
@@ -70,7 +70,7 @@ block content
                 div.panel-body                
                     div(id='chart20' class='c3chart')              
     div.row
-        div.col-lg-12
+        div.col-md-12
             div.panel.panel-primary
                 div.panel-heading
                     h3.panel-title 
@@ -79,7 +79,7 @@ block content
                 div.panel-body                
                     div(id='chart30' class='c3chart')                      
     div.row
-        div.col-lg-4             
+        div.col-md-4             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
@@ -87,7 +87,7 @@ block content
                             | Goals By Period   
                 div.panel-body      
                     div(id='chart40' class='c3chart') 
-        div.col-lg-4             
+        div.col-md-4             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
@@ -95,7 +95,7 @@ block content
                             | Assists By Period   
                 div.panel-body      
                     div(id='chart41' class='c3chart') 
-        div.col-lg-4             
+        div.col-md-4             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
@@ -104,7 +104,7 @@ block content
                 div.panel-body    
                     div(id='chart42' class='c3chart') 
     div.row
-        div.col-lg-4             
+        div.col-md-4             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
@@ -112,7 +112,7 @@ block content
                             | Goals By Kind   
                 div.panel-body    
                     div(id='chart50' class='c3chart') 
-        div.col-lg-4             
+        div.col-md-4             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
@@ -120,16 +120,16 @@ block content
                             | Assists From By Player   
                 div.panel-body    
                     div(id='chart51' class='c3chart') 
-        div.col-lg-4             
+        div.col-md-4             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
                         i.fa.fa-pie-chart 
                             | Assists To By Player   
-            div.panel-body               
-                div(id='chart52' class='c3chart') 
+                div.panel-body               
+                    div(id='chart52' class='c3chart') 
     div.row
-        div.col-lg-4             
+        div.col-md-4             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
@@ -137,7 +137,7 @@ block content
                             | Penalty By Period   
                 div.panel-body      
                     div(id='chart60' class='c3chart') 
-        div.col-lg-8             
+        div.col-md-8             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
@@ -146,15 +146,15 @@ block content
                 div.panel-body            
                     div(id='chart61' class='c3chart') 
     div.row
-        div.col-lg-4             
+        div.col-md-4             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
                         i.fa.fa-pie-chart 
                             | Penalty In Minutes By Period   
-            div.panel-body              
-                div(id='chart70' class='c3chart') 
-        div.col-lg-8             
+                div.panel-body              
+                    div(id='chart70' class='c3chart') 
+        div.col-md-8             
             div.panel.panel-green
                 div.panel-heading
                     h3.panel-title 
@@ -187,7 +187,7 @@ block scripts
     script(src="/bower_components/sb-admin-2/js/sb-admin-2.js" type="text/javascript")   
 
     script(type='text/javascript').
-        var chart = c3.generate({
+        c3.generate({
             bindto: '#chart00',
             data: {
                 json: !{JSON.stringify(player_stats_0.occurred_at)},
@@ -237,9 +237,8 @@ block scripts
                 }
             }
         });  
-
-    script(type='text/javascript').
-        var chart0 = c3.generate({
+        
+        c3.generate({
             bindto: '#chart10',
             data: {
                 json: !{JSON.stringify(player_stats_1.gamestats)},
@@ -258,8 +257,7 @@ block scripts
             }
         });
 
-    script(type='text/javascript').
-        var chart0 = c3.generate({
+        c3.generate({
             bindto: '#chart20',
             data: {
                 json: !{JSON.stringify(player_stats_1.opponent_stats)},
@@ -282,8 +280,7 @@ block scripts
             }
         });
 
-    script(type='text/javascript').
-        var chart0 = c3.generate({
+        c3.generate({
             bindto: '#chart30',
             data: {
                 json: !{JSON.stringify(player_stats_1.rink_stats)},
@@ -305,8 +302,8 @@ block scripts
                 }
             }
         });
-    script(type='text/javascript').
-        var chart = c3.generate({
+
+        c3.generate({
             bindto: '#chart40',
             size: {
                 height: 240,
@@ -324,8 +321,8 @@ block scripts
                 }
             }
         });              
-    script(type='text/javascript').
-        var chart = c3.generate({
+
+        c3.generate({
             bindto: '#chart41',
             size: {
                 height: 240,
@@ -342,9 +339,9 @@ block scripts
                     }
                 }
             }
-        });               
-    script(type='text/javascript').
-        var chart = c3.generate({
+        });         
+              
+        c3.generate({
             bindto: '#chart42',
             size: {
                 height: 240,
@@ -363,8 +360,7 @@ block scripts
             }
         });    
 
-    script(type='text/javascript').
-        var chart = c3.generate({
+        c3.generate({
             bindto: '#chart50',
             size: {
                 height: 240,
@@ -382,8 +378,8 @@ block scripts
                 }
             }
         });  
-    script(type='text/javascript').
-        var chart = c3.generate({
+
+        c3.generate({
             bindto: '#chart51',
             size: {
                 height: 240,
@@ -400,9 +396,9 @@ block scripts
                     }
                 }
             }
-        });              
-    script(type='text/javascript').
-        var chart = c3.generate({
+        });      
+                
+        c3.generate({
             bindto: '#chart52',
             size: {
                 height: 240,
@@ -420,8 +416,8 @@ block scripts
                 }
             }
         });     
-    script(type='text/javascript').
-        var chart = c3.generate({
+        
+        c3.generate({
             bindto: '#chart60',
             size: {
                 height: 240,
@@ -439,8 +435,8 @@ block scripts
                 }
             }
         });      
-    script(type='text/javascript').
-        var chart = c3.generate({
+        
+        c3.generate({
             bindto: '#chart61',
             size: {
                 height: 240,
@@ -461,8 +457,8 @@ block scripts
                 }
             }
         });
-    script(type='text/javascript').
-        var chart = c3.generate({
+        
+        c3.generate({
             bindto: '#chart70',
             size: {
                 height: 240,
@@ -480,8 +476,8 @@ block scripts
                 }
             }
         });                   
-    script(type='text/javascript').
-        var chart = c3.generate({
+
+        c3.generate({
             bindto: '#chart71',
             size: {
                 height: 240,
