--- a/myhockeyapp/views/players_stats.pug
+++ b/myhockeyapp/views/players_stats.pug
@@ -102,7 +102,7 @@ block scripts
     script(src="/bower_components/sb-admin-2/js/sb-admin-2.js" type="text/javascript")   
     
     script(type="text/javascript").
-        var chart = c3.generate({
+        c3.generate({
             bindto: '#chart00',
             data: {
                 json: !{JSON.stringify(players_stats)},
