--- a/myhockeyapp/views/index.pug
+++ b/myhockeyapp/views/index.pug
@@ -111,7 +111,7 @@ block content
                                 |#{dashboard.gf}
                             div
                                 |Goals For
-                a(href="#")
+                a(href="/teamstats/goalfor")
                     div.panel-footer
                         span.pull-left
                             |View Details
@@ -128,7 +128,7 @@ block content
                                 |#{dashboard.ga}
                             div
                                 |Goals Against
-                a(href="#")
+                a(href="/teamstats/goalagainst")
                     div.panel-footer
                         span.pull-left
                             |View Details
@@ -145,7 +145,7 @@ block content
                                 |#{dashboard.p}
                             div
                                 |Penalties
-                a(href="#")
+                a(href="/teamstats/penalty")
                     div.panel-footer
                         span.pull-left
                             |View Details
@@ -163,7 +163,7 @@ block content
                                 |#{dashboard.pim}
                             div
                                 |Penalty in Minutes
-                a(href="#")
+                a(href="/teamstats/penalty")
                     div.panel-footer
                         span.pull-left
                             |View Details
